Se armo la estructura html

--- a/html/index.html
+++ b/html/index.html
@@ -10,9 +10,37 @@
 </head>
 
 <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <header>
+        <img src="" alt="">
+        <a href="#"></a>
+        <a href="#"></a>
+        <a href="#"></a>
+        <a href="#"></a>
+        <a href="#"></a>
+        <a href="#"></a>
+        <a href="#"></a>
+        <a href="#"></a>
+    </header>
+    <main>
+        <section></section>
+
+        <section></section>
+
+        <section></section>
+
+        <section></section>
+
+        <section></section>
+
+        <section></section>
+
+        <section></section>
+
+        <section></section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 
 </html>
