Se armo la estructura del header html

--- a/html/index.html
+++ b/html/index.html
@@ -12,14 +12,16 @@
 <body>
     <header>
         <img src="" alt="">
-        <a href="#"></a>
-        <a href="#"></a>
-        <a href="#"></a>
-        <a href="#"></a>
-        <a href="#"></a>
-        <a href="#"></a>
-        <a href="#"></a>
-        <a href="#"></a>
+
+        <a href="#">HOME</a>
+        <a href="#">ABOUT US</a>
+        <a href="#">SERVICES</a>
+        <a href="#">PORTAFOLIO</a>
+        <a href="#">BLOG</a>
+        <a href="#">CONTACT</a>
+        <img src="" alt="">
+        <img src="" alt="">
+        <a href="#">SIGN IN</a>
     </header>
     <main>
         <section></section>
