--- a/html/index.html
+++ b/html/index.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Guido Olivero</title>
 </head>
 
 <body>
+    <!-- nav -->
     <header>
         <img src="" alt="">
 
@@ -23,8 +24,21 @@
         <img src="" alt="">
         <a href="#">SIGN IN</a>
     </header>
+
     <main>
-        <section></section>
+        <section class="seccion-1">
+            <div>
+                <img src="" alt="">
+                <h2>01/02</h2>
+                <h1>INSPIRATION</h1>
+                <h2>FOR BUILD WEBSITES</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, voluptatum ea illo odio, ex
+                    accusamus voluptatem amet laudantium eos numquam dolorum cupiditate minima, tenetur quod earum rerum
+                    tempore placeat. Maxime!</p>
+                <button>KNOW MORE</button>
+                <h4>DEMOS</h4>
+            </div>
+        </section>
 
         <section></section>
 
@@ -40,9 +54,11 @@
 
         <section></section>
     </main>
+
     <footer>
 
     </footer>
+
 </body>
 
 </html>
