Se armo la estructura del 2do section html y se agrego la foto del hero

--- a/html/index.html
+++ b/html/index.html
@@ -26,9 +26,10 @@
     </header>
 
     <main>
+        <!-- hero -->
         <section class="seccion-1">
             <div>
-                <img src="" alt="">
+                <img src="/img/imagen hero.jpg" alt="">
                 <h2>01/02</h2>
                 <h1>INSPIRATION</h1>
                 <h2>FOR BUILD WEBSITES</h2>
@@ -40,19 +41,74 @@
             </div>
         </section>
 
-        <section></section>
+        <!-- Main Services -->
+        <section class="seccion-2">
+            <div>
+                <div>
+                    <img src="" alt="">
+                    <h2>Web Development</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores quae animi asperiores
+                        consequatur! Nihil vitae dignissimos, accusantium quidem magnam minima asperiores facilis saepe
+                        quas magni eligendi ad. Adipisci, aperiam commodi.</p>
+                    <h3>About Development</h3>
+                </div>
+                <div>
+                    <img src="" alt="">
+                    <h2>Web Development</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores quae animi asperiores
+                        consequatur! Nihil vitae dignissimos, accusantium quidem magnam minima asperiores facilis saepe
+                        quas magni eligendi ad. Adipisci, aperiam commodi.</p>
+                    <h3>About Development</h3>
+                </div>
+                <div>
+                    <img src="" alt="">
+                    <h2>Web Development</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores quae animi asperiores
+                        consequatur! Nihil vitae dignissimos, accusantium quidem magnam minima asperiores facilis saepe
+                        quas magni eligendi ad. Adipisci, aperiam commodi.</p>
+                    <h3>About Development</h3>
+                </div>
+                <div>
+                    <img src="" alt="">
+                    <h2>Web Development</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores quae animi asperiores
+                        consequatur! Nihil vitae dignissimos, accusantium quidem magnam minima asperiores facilis saepe
+                        quas magni eligendi ad. Adipisci, aperiam commodi.</p>
+                    <h3>About Development</h3>
+                </div>
+            </div>
+            <div>
+                <h2>Main Services</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus sapiente ea assumenda officia maxime
+                    repellat obcaecati quia, architecto soluta sit doloremque quod, cum aliquam, adipisci accusantium
+                    asperiores expedita accusamus temporibus.</p>
+                <button>SEE ALL SERVICES</button>
+            </div>
+        </section>
 
-        <section></section>
+        <section>
 
-        <section></section>
+        </section>
 
-        <section></section>
+        <section>
 
-        <section></section>
+        </section>
 
-        <section></section>
+        <section>
 
-        <section></section>
+        </section>
+
+        <section>
+
+        </section>
+
+        <section>
+
+        </section>
+
+        <section>
+
+        </section>
     </main>
 
     <footer>
