--- a/html/index.html
+++ b/html/index.html
@@ -86,8 +86,18 @@
             </div>
         </section>
 
-        <section>
-
+        <!-- About -->
+        <section class="seccion-3">
+            <div>
+                <h2>About Sombra</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem quo consectetur cum quia magni
+                    voluptatibus, laborum, beatae impedit eum architecto sunt! Quos pariatur neque ipsam laboriosam
+                    maxime eius eos alias!</p>
+                <button>MORE ABOUT US</button>
+            </div>
+            <div>
+                <img src="/img/imagen hero.jpg" alt="">
+            </div>
         </section>
 
         <section>
