Se armo la estructura del 4to section html

--- a/html/index.html
+++ b/html/index.html
@@ -12,17 +12,20 @@
 <body>
     <!-- nav -->
     <header>
-        <img src="" alt="">
+        <nav>
+            <img src="" alt="">
 
-        <a href="#">HOME</a>
-        <a href="#">ABOUT US</a>
-        <a href="#">SERVICES</a>
-        <a href="#">PORTAFOLIO</a>
-        <a href="#">BLOG</a>
-        <a href="#">CONTACT</a>
-        <img src="" alt="">
-        <img src="" alt="">
-        <a href="#">SIGN IN</a>
+            <a href="#">HOME</a>
+            <a href="#">ABOUT US</a>
+            <a href="#">SERVICES</a>
+            <a href="#">PORTAFOLIO</a>
+            <a href="#">BLOG</a>
+            <a href="#">CONTACT</a>
+            <img src="" alt="">
+            <img src="" alt="">
+            <a href="#">SIGN IN</a>
+        </nav>
+
     </header>
 
     <main>
@@ -100,8 +103,34 @@
             </div>
         </section>
 
-        <section>
+        <!-- Our Projects -->
+        <section class="seccion-4">
+            <div>
+                <h2>Our Projects</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem quo consectetur cum quia magni
+                    voluptatibus, laborum, beatae impedit eum architecto sunt! Quos pariatur neque ipsam laboriosam
+                    maxime eius eos alias!</p>
+                <button>VIEW ALL WORKS</button>
+            </div>
 
+            <div>
+                <nav>
+                    <a href="#">SHOW ALL</a>
+                    <a href="#">SHOW ALL</a>
+                    <a href="#">SHOW ALL</a>
+                    <a href="#">SHOW ALL</a>
+                    <a href="#">SHOW ALL</a>
+                </nav>
+                
+                <div>
+                    <img src="/img/imagen hero.jpg" alt="">
+                    <img src="/img/imagen hero.jpg" alt="">
+                    <img src="/img/imagen hero.jpg" alt="">
+                    <img src="/img/imagen hero.jpg" alt="">
+                    <img src="/img/imagen hero.jpg" alt="">
+                    <img src="/img/imagen hero.jpg" alt="">
+                </div>
+            </div>
         </section>
 
         <section>
