Se armo la estructura del 5to section html

--- a/html/index.html
+++ b/html/index.html
@@ -121,7 +121,7 @@
                     <a href="#">SHOW ALL</a>
                     <a href="#">SHOW ALL</a>
                 </nav>
-                
+
                 <div>
                     <img src="/img/imagen hero.jpg" alt="">
                     <img src="/img/imagen hero.jpg" alt="">
@@ -133,8 +133,42 @@
             </div>
         </section>
 
-        <section>
+        <!-- Awesome Features -->
+        <section class="seccion-5">
+            <div>
+                <img src="/img/imagen hero.jpg" alt="">
+            </div>
 
+            <div>
+                <h2>Awesome Features</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, nulla perferendis odio illo dicta
+                    error velit maiores alias est beatae ex exercitationem placeat cupiditate sint commodi quisquam
+                    corporis similique cumque?</p>
+                <div>
+                    <h3>Responsive Design</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, nulla perferendis odio illo dicta
+                        error velit maiores alias est beatae ex exercitationem placeat cupiditate sint commodi quisquam
+                        corporis similique cumque?</p>
+                </div>
+                <div>
+                    <h3>Responsive Design</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, nulla perferendis odio illo dicta
+                        error velit maiores alias est beatae ex exercitationem placeat cupiditate sint commodi quisquam
+                        corporis similique cumque?</p>
+                </div>
+                <div>
+                    <h3>Responsive Design</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, nulla perferendis odio illo dicta
+                        error velit maiores alias est beatae ex exercitationem placeat cupiditate sint commodi quisquam
+                        corporis similique cumque?</p>
+                </div>
+                <div>
+                    <h3>Responsive Design</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, nulla perferendis odio illo dicta
+                        error velit maiores alias est beatae ex exercitationem placeat cupiditate sint commodi quisquam
+                        corporis similique cumque?</p>
+                </div>
+            </div>
         </section>
 
         <section>
