--- a/html/index.html
+++ b/html/index.html
@@ -42,6 +42,11 @@
                 <button>KNOW MORE</button>
                 <h4>DEMOS</h4>
             </div>
+
+            <div>
+                <button><img src="" alt=""></button>
+                <button><img src="" alt=""></button>
+            </div>
         </section>
 
         <!-- Main Services -->
@@ -171,10 +176,27 @@
             </div>
         </section>
 
-        <section>
+        <!-- Opiniones -->
+        <section class="seccion-6">
+            <div>
+                <img src="/img/imagen hero.jpg" alt="">
+            </div>
 
+            <div>
+                <h2>Lourdes Huachaka</h2>
+                <h4>CEO & Founder | Unitetemplates</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae delectus reprehenderit,
+                    perspiciatis similique amet facilis iure voluptates facere accusantium, nihil libero? Impedit
+                    laudantium quibusdam tempore est quidem atque repudiandae perspiciatis.</p>
+                <!-- ver el tema de las etrellas -->
+                <div>
+                    <button><img src="" alt=""></button>
+                    <button><img src="" alt=""></button>
+                </div>
+            </div>
         </section>
 
+        <!-- Our experts -->
         <section>
 
         </section>
