Se armo la estructura del 7to section html

--- a/html/index.html
+++ b/html/index.html
@@ -197,8 +197,35 @@
         </section>
 
         <!-- Our experts -->
-        <section>
+        <section class="seccion-7">
+            <div>
+                <h2>Our Experts</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae delectus reprehenderit,
+                    perspiciatis similique amet facilis iure voluptates facere accusantium, nihil libero? Impedit
+                    laudantium quibusdam tempore est quidem atque repudiandae perspiciatis.</p>
+                <button>SEE ALL MEMBERS</button>
+            </div>
 
+            <div>
+                <img src="/img/imagen hero.jpg" alt="">
+                <h2>Juliana Rivasplata</h2>
+                <h3>CO - Founder</h3>
+                <div>
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                </div>
+                <img src="/img/imagen hero.jpg" alt="">
+                <h2>Juliana Rivasplata</h2>
+                <h3>CO - Founder</h3>
+                <div>
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                </div>
+            </div>
         </section>
 
         <section>
