Se armo la estructura del 8to section html

--- a/html/index.html
+++ b/html/index.html
@@ -228,8 +228,47 @@
             </div>
         </section>
 
-        <section>
+        <!-- Blog spots -->
+        <section class="seccion-8">
+            <div>
+                <h1>Blog Posts</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae delectus reprehenderit,
+                    perspiciatis similique amet facilis iure voluptates facere accusantium, nihil libero? Impedit
+                    laudantium quibusdam tempore est quidem atque repudiandae perspiciatis.</p>
+            </div>
 
+            <div>
+                <div>
+                    <img src="/img/imagen hero.jpg" alt="">
+                    <button>BUSINNES</button>
+                    <h2>Last adventure in the snow</h2>
+                    <h3>Genius 20/02/2022</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae delectus reprehenderit,
+                        perspiciatis similique amet facilis iure voluptates facere accusantium, nihil libero? Impedit
+                        laudantium quibusdam tempore est quidem atque repudiandae perspiciatis.</p>
+                </div>
+
+                <div>
+                    <img src="/img/imagen hero.jpg" alt="">
+                    <button>BUSINNES</button>
+                    <h2>Last adventure in the snow</h2>
+                    <h3>Genius 20/02/2022</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae delectus reprehenderit,
+                        perspiciatis similique amet facilis iure voluptates facere accusantium, nihil libero? Impedit
+                        laudantium quibusdam tempore est quidem atque repudiandae perspiciatis.</p>
+                </div>
+                
+                <div>
+                    <img src="/img/imagen hero.jpg" alt="">
+
+                    <button>BUSINNES</button>
+                    <h2>Last adventure in the snow</h2>
+                    <h3>Genius 20/02/2022</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae delectus reprehenderit,
+                        perspiciatis similique amet facilis iure voluptates facere accusantium, nihil libero? Impedit
+                        laudantium quibusdam tempore est quidem atque repudiandae perspiciatis.</p>
+                </div>
+            </div>
         </section>
     </main>
 
