Se armo la estructura del footer html

--- a/html/index.html
+++ b/html/index.html
@@ -257,7 +257,7 @@
                         perspiciatis similique amet facilis iure voluptates facere accusantium, nihil libero? Impedit
                         laudantium quibusdam tempore est quidem atque repudiandae perspiciatis.</p>
                 </div>
-                
+
                 <div>
                     <img src="/img/imagen hero.jpg" alt="">
 
@@ -273,7 +273,47 @@
     </main>
 
     <footer>
+        <div>
+            <img src="" alt="">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae delectus reprehenderit,
+                perspiciatis similique amet facilis iure voluptates facere accusantium, nihil libero? Impedit
+                laudantium quibusdam tempore est quidem atque repudiandae perspiciatis.</p>
+            <div>
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+            </div>
 
+        </div>
+
+        <div>
+            <h2>Company</h2>
+            <h3>Home</h3>
+            <h3>Home</h3>
+            <h3>Home</h3>
+            <h3>Home</h3>
+            <h3>Home</h3>
+        </div>
+
+        <div>
+            <h2>Get News</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae delectus reprehenderit,
+                perspiciatis similique amet facilis iure voluptates facere accusantium, nihil libero? Impedit
+                laudantium quibusdam tempore est quidem atque repudiandae perspiciatis.</p>
+            <input type="email" name="" id="" placeholder="Email">
+            <button>SUSCRIBE</button>
+        </div>
+
+        <div>
+            <h2>Contact Us</h2>
+            <h4>Tupac Amaru 200 - Comas Lima - Peru</h4>
+            <h4>support@localhost.xyz</h4>
+            <h4>Office: +54-11-5343-2752</h4>
+            <h4>WhatsApp: +54-9-11-5343-2752</h4>
+        </div>
+
+        <p>2023 Guido Olivero - by Guido Olivero</p>
     </footer>
 
 </body>
