Se agrego el icono del nav

--- a/html/index.html
+++ b/html/index.html
@@ -16,14 +16,14 @@
             <img src="" alt="">
 
             <a href="#">HOME</a>
-            <a href="#">ABOUT US</a>
-            <a href="#">SERVICES</a>
+            <a href="#">SOBRE NOSOTROS</a>
+            <a href="#">SERVICIOS</a>
             <a href="#">PORTAFOLIO</a>
             <a href="#">BLOG</a>
-            <a href="#">CONTACT</a>
+            <a href="#">CONTACTO</a>
             <img src="" alt="">
             <img src="" alt="">
-            <a href="#">SIGN IN</a>
+            <a href="#">INICIAR SESION</a>
         </nav>
 
     </header>
