Se cambiaron los a del nav

--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,7 @@
         <nav>
             <img src="" alt="">
 
-            <a href="#">HOME</a>
+            <a href="#">INICIO</a>
             <a href="#">SOBRE NOSOTROS</a>
             <a href="#">SERVICIOS</a>
             <a href="#">PORTAFOLIO</a>
