--- a/html/index.html
+++ b/html/index.html
@@ -77,7 +77,7 @@
         <section class="seccion-2">
             <div class="contenedor-servicios">
 
-                <div class="contenedor-interno">
+                <div class="contenedor-interno contenedor-blanco1">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                         class="bi bi-braces" viewBox="0 0 16 16">
                         <path
@@ -90,7 +90,7 @@
                     <h3>About Development</h3>
                 </div>
 
-                <div class="contenedor-interno">
+                <div class="contenedor-interno contenedor-negro1">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                         class="bi bi-layout-sidebar-inset" viewBox="0 0 16 16">
                         <path
@@ -104,7 +104,7 @@
                     <h3>About Development</h3>
                 </div>
 
-                <div class="contenedor-interno">
+                <div class="contenedor-interno contenedor-negro2">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                         class="bi bi-vector-pen" viewBox="0 0 16 16">
                         <path fill-rule="evenodd"
@@ -118,9 +118,9 @@
                     <h3>About Development</h3>
                 </div>
 
-                <div class="contenedor-interno">
+                <div class="contenedor-interno contenedor-blanco2">
                     <svg xmlns="http://www.w3.org/2000/svg" width="22" height="20" id="check">
-                        <g fill="none" fill-rule="evenodd" stroke="#000" stroke-linecap="round" stroke-linejoin="round"
+                        <g fill="none" fill-rule="evenodd" stroke="#e5383a" stroke-linecap="round" stroke-linejoin="round"
                             stroke-width="2">
                             <path d="m7 9 3 3L21 1"></path>
                             <path d="M19 10v7a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h11"></path>
@@ -135,7 +135,7 @@
             </div>
 
             <div class="contenedor-main_service">
-                <h2>Main Services</h2>
+                <h2><span>-</span>Main Services</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus sapiente ea assumenda officia maxime
                     repellat obcaecati quia, architecto soluta sit doloremque quod, cum aliquam, adipisci accusantium
                     asperiores expedita accusamus temporibus.</p>
