Se empezo con la 3er section

--- a/html/index.html
+++ b/html/index.html
@@ -96,7 +96,7 @@
                         <path
                             d="M14 2a1 1 0 0 1 1 1v10a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V3a1 1 0 0 1 1-1h12zM2 1a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2H2z" />
                         <path d="M3 4a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V4z" />
-                    </svg>  
+                    </svg>
                     <h2>Web Development</h2>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores quae animi asperiores
                         consequatur! Nihil vitae dignissimos, accusantium quidem magnam minima asperiores facilis saepe
@@ -120,8 +120,8 @@
 
                 <div class="contenedor-interno contenedor-blanco2">
                     <svg xmlns="http://www.w3.org/2000/svg" width="22" height="20" id="check">
-                        <g fill="none" fill-rule="evenodd" stroke="#e5383a" stroke-linecap="round" stroke-linejoin="round"
-                            stroke-width="2">
+                        <g fill="none" fill-rule="evenodd" stroke="#e5383a" stroke-linecap="round"
+                            stroke-linejoin="round" stroke-width="2">
                             <path d="m7 9 3 3L21 1"></path>
                             <path d="M19 10v7a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h11"></path>
                         </g>
@@ -145,13 +145,16 @@
 
         <!-- About -->
         <section class="seccion-3">
-            <div>
-                <h2>About Sombra</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem quo consectetur cum quia magni
-                    voluptatibus, laborum, beatae impedit eum architecto sunt! Quos pariatur neque ipsam laboriosam
-                    maxime eius eos alias!</p>
+            <div class="perfil">
+                <h2><span>-</span>Sobre mi</h2>
+                <p>Soy una persona multidisciplinar, proactiva, responsable y con muchas ganas de aprender. Estoy en la
+                    diplomatura de desarrollador Full Stack.
+                    Me siento especialmente motivado de poder tener mi primer trabajo en el mundo de Sistemas, aprender
+                    cosas nuevas, trabajar en equipo buscando soluciones o alternativas para las metas propuestas y
+                    brindar todos mis conocimientos y aprendizajes</p>
                 <button>MORE ABOUT US</button>
             </div>
+            
             <div>
                 <img src="/img/imagen hero.jpg" alt="">
             </div>
