--- a/html/index.html
+++ b/html/index.html
@@ -154,7 +154,7 @@
                     brindar todos mis conocimientos y aprendizajes</p>
                 <button>MORE ABOUT US</button>
             </div>
-            
+
             <div>
                 <img src="/img/imagen hero.jpg" alt="">
             </div>
@@ -162,30 +162,30 @@
 
         <!-- Our Projects -->
         <section class="seccion-4">
-            <div>
-                <h2>Our Projects</h2>
+            <h2><span>-</span>Proyectos</h2>
+
+            <div class="descripcion-proyectos">
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem quo consectetur cum quia magni
-                    voluptatibus, laborum, beatae impedit eum architecto sunt! Quos pariatur neque ipsam laboriosam
-                    maxime eius eos alias!</p>
-                <button>VIEW ALL WORKS</button>
+                    voluptatibus, laborum, beatae impedit eum architecto sunt!</p>
+                <button class="btn-proyectos">VER TODOS LOS TRABAJOS</button>
             </div>
 
             <div>
-                <nav>
-                    <a href="#">SHOW ALL</a>
-                    <a href="#">SHOW ALL</a>
-                    <a href="#">SHOW ALL</a>
-                    <a href="#">SHOW ALL</a>
-                    <a href="#">SHOW ALL</a>
+                <nav class="nav-galeria">
+                    <a href="#">MOSTRAR TODO</a>
+                    <a href="#">DISEÑO</a>
+                    <a href="#">GRAFICO</a>
+                    <a href="#">DESARROLLO</a>
+                    <a href="#">WEB</a>
                 </nav>
 
-                <div>
-                    <img src="/img/imagen hero.jpg" alt="">
-                    <img src="/img/imagen hero.jpg" alt="">
-                    <img src="/img/imagen hero.jpg" alt="">
-                    <img src="/img/imagen hero.jpg" alt="">
-                    <img src="/img/imagen hero.jpg" alt="">
-                    <img src="/img/imagen hero.jpg" alt="">
+                <div class="galeria">
+                    <a href="https://guidoolivero.github.io/Ivyre/" target="_blank"><img src="/img/Livre.png"
+                            alt=""></a>
+                    <a href="https://guidoolivero.github.io/LarkHomesTP3/" target="_blank"><img src="/img/RealState.png"
+                            alt=""></a>
+                    <a href="https://guidoolivero.github.io/Giftify/" target="_blank"><img src="/img/Gifty.png"
+                            alt=""></a>
                 </div>
             </div>
         </section>
