--- a/html/index.html
+++ b/html/index.html
@@ -45,20 +45,20 @@
         <!-- hero -->
         <section class="seccion-1">
             <h2>01/02</h2>
-            <img src="/img/imagen hero.jpg" alt="">
 
+            <div class="contenedor-imagen">
+                <img src="/img/imagen hero.jpg" alt="">
+            </div>
 
             <div class="contenedor-texto">
-                <h1>INSPIRATION</h1>
-                <h4>FOR BUILD WEBSITES</h4>
+                <h1>INSPIRACION</h1>
+                <h4>POR CONSTRUIR PAGINAS</h4>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, voluptatum ea illo odio, ex
                     accusamus voluptatem amet laudantium eos numquam dolorum cupiditate minima, tenetur quod earum rerum
                     tempore placeat. Maxime!</p>
                 <button>KNOW MORE</button>
 
             </div>
-
-
 
             <div>
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -152,10 +152,10 @@
                     Me siento especialmente motivado de poder tener mi primer trabajo en el mundo de Sistemas, aprender
                     cosas nuevas, trabajar en equipo buscando soluciones o alternativas para las metas propuestas y
                     brindar todos mis conocimientos y aprendizajes</p>
-                <button>MORE ABOUT US</button>
+                <button>MAS SOBRE NOSOTROS</button>
             </div>
 
-            <div>
+            <div class="contenedor-imagen">
                 <img src="/img/imagen hero.jpg" alt="">
             </div>
         </section>
