Se siguen con los detalles

--- a/html/index.html
+++ b/html/index.html
@@ -16,12 +16,11 @@
         <a class="logo" href="#">Guido Olivero</a>
         <nav class="nav-bar">
 
-            <a href="#">INICIO</a>
-            <a href="#">SOBRE NOSOTROS</a>
-            <a href="#">SERVICIOS</a>
-            <a href="#">PORTAFOLIO</a>
-            <a href="#">BLOG</a>
-            <a href="#">CONTACTO</a>
+            <a href="#seccion-1">INICIO</a>
+            <a href="#seccion-2">SERVICIOS</a>
+            <a href="#seccion-3">SOBRE MI</a>
+            <a href="#seccion-4">PORTAFOLIO</a>
+            <a href="#seccion-5">CONTACTO</a>
 
             <svg class="lupa" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256.001 256.001"
                 id="magnifying-glass-searching-glass">
@@ -43,7 +42,7 @@
 
     <main>
         <!-- hero -->
-        <section class="seccion-1">
+        <section class="seccion-1" id="seccion-1">
             <h2>01/02</h2>
 
             <div class="contenedor-imagen">
@@ -53,10 +52,18 @@
             <div class="contenedor-texto">
                 <h1>INSPIRACION</h1>
                 <h4>POR CONSTRUIR PAGINAS</h4>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, voluptatum ea illo odio, ex
-                    accusamus voluptatem amet laudantium eos numquam dolorum cupiditate minima, tenetur quod earum rerum
-                    tempore placeat. Maxime!</p>
-                <button>KNOW MORE</button>
+                <p>¡Hola! Mi nombre es Guido Olivero y soy un apasionado estudiante de desarrollo web en busca de
+                    convertirme en un desarrollador full stack. Desde muy joven, siempre me ha fascinado el mundo de la
+                    informática y todo lo relacionado con la tecnología. Me encanta la idea de crear soluciones
+                    innovadoras y funcionales utilizando mis habilidades de programación.</p>
+                <button>
+                    CONOCE MAS
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#ffffff"
+                        class="bi bi-caret-right-fill" viewBox="0 0 16 16">
+                        <path
+                            d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z" />
+                    </svg>
+                </button>
 
             </div>
 
@@ -74,85 +81,105 @@
         </section>
 
         <!-- Main Services -->
-        <section class="seccion-2">
+        <section class="seccion-2" id="seccion-2">
             <div class="contenedor-servicios">
 
                 <div class="contenedor-interno contenedor-blanco1">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                    <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor"
                         class="bi bi-braces" viewBox="0 0 16 16">
                         <path
                             d="M2.114 8.063V7.9c1.005-.102 1.497-.615 1.497-1.6V4.503c0-1.094.39-1.538 1.354-1.538h.273V2h-.376C3.25 2 2.49 2.759 2.49 4.352v1.524c0 1.094-.376 1.456-1.49 1.456v1.299c1.114 0 1.49.362 1.49 1.456v1.524c0 1.593.759 2.352 2.372 2.352h.376v-.964h-.273c-.964 0-1.354-.444-1.354-1.538V9.663c0-.984-.492-1.497-1.497-1.6zM13.886 7.9v.163c-1.005.103-1.497.616-1.497 1.6v1.798c0 1.094-.39 1.538-1.354 1.538h-.273v.964h.376c1.613 0 2.372-.759 2.372-2.352v-1.524c0-1.094.376-1.456 1.49-1.456V7.332c-1.114 0-1.49-.362-1.49-1.456V4.352C13.51 2.759 12.75 2 11.138 2h-.376v.964h.273c.964 0 1.354.444 1.354 1.538V6.3c0 .984.492 1.497 1.497 1.6z" />
                     </svg>
-                    <h2>Web Development</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores quae animi asperiores
-                        consequatur! Nihil vitae dignissimos, accusantium quidem magnam minima asperiores facilis saepe
-                        quas magni eligendi ad. Adipisci, aperiam commodi.</p>
-                    <h3>About Development</h3>
+                    <h2>Desarrolo Web</h2>
+                    <p>El desarrollo web es el proceso de crear y mantener sitios web y aplicaciones web. Implica la
+                        combinación de diferentes tecnologías, como HTML, CSS y JavaScript, para diseñar interfaces
+                        atractivas y funcionales. </p>
+                    <h3>Sobre desarrollo</h3>
                 </div>
 
                 <div class="contenedor-interno contenedor-negro1">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                    <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor"
                         class="bi bi-layout-sidebar-inset" viewBox="0 0 16 16">
                         <path
                             d="M14 2a1 1 0 0 1 1 1v10a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V3a1 1 0 0 1 1-1h12zM2 1a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2H2z" />
                         <path d="M3 4a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V4z" />
                     </svg>
-                    <h2>Web Development</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores quae animi asperiores
-                        consequatur! Nihil vitae dignissimos, accusantium quidem magnam minima asperiores facilis saepe
-                        quas magni eligendi ad. Adipisci, aperiam commodi.</p>
-                    <h3>About Development</h3>
+                    <h2>Diseño ux/ix</h2>
+                    <p>El diseño UX (Experiencia de Usuario) es fundamental en el desarrollo web, ya que se centra en
+                        crear interfaces intuitivas y agradables para los usuarios. </p>
+                    <h3>Sobre UX/IX</h3>
                 </div>
 
                 <div class="contenedor-interno contenedor-negro2">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                    <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor"
                         class="bi bi-vector-pen" viewBox="0 0 16 16">
                         <path fill-rule="evenodd"
                             d="M10.646.646a.5.5 0 0 1 .708 0l4 4a.5.5 0 0 1 0 .708l-1.902 1.902-.829 3.313a1.5 1.5 0 0 1-1.024 1.073L1.254 14.746 4.358 4.4A1.5 1.5 0 0 1 5.43 3.377l3.313-.828L10.646.646zm-1.8 2.908-3.173.793a.5.5 0 0 0-.358.342l-2.57 8.565 8.567-2.57a.5.5 0 0 0 .34-.357l.794-3.174-3.6-3.6z" />
                         <path fill-rule="evenodd" d="M2.832 13.228 8 9a1 1 0 1 0-1-1l-4.228 5.168-.026.086.086-.026z" />
                     </svg>
-                    <h2>Web Development</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores quae animi asperiores
-                        consequatur! Nihil vitae dignissimos, accusantium quidem magnam minima asperiores facilis saepe
-                        quas magni eligendi ad. Adipisci, aperiam commodi.</p>
-                    <h3>About Development</h3>
+                    <h2>Diseño Grafico</h2>
+                    <p>El diseño gráfico es esencial en el desarrollo web, ya que se encarga de crear elementos visuales
+                        atractivos y coherentes en un sitio web. </p>
+                    <h3>Sobre diseño</h3>
                 </div>
 
                 <div class="contenedor-interno contenedor-blanco2">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="22" height="20" id="check">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" id="check">
                         <g fill="none" fill-rule="evenodd" stroke="#e5383a" stroke-linecap="round"
                             stroke-linejoin="round" stroke-width="2">
                             <path d="m7 9 3 3L21 1"></path>
                             <path d="M19 10v7a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h11"></path>
                         </g>
                     </svg>
-                    <h2>Web Development</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores quae animi asperiores
-                        consequatur! Nihil vitae dignissimos, accusantium quidem magnam minima asperiores facilis saepe
-                        quas magni eligendi ad. Adipisci, aperiam commodi.</p>
-                    <h3>About Development</h3>
+                    <h2>Marketing</h2>
+                    <p>El marketing juega un papel crucial en el desarrollo web, ya que se enfoca en promover y
+                        posicionar un sitio web de manera efectiva. </p>
+                    <h3>Sobre marketing</h3>
                 </div>
             </div>
 
             <div class="contenedor-main_service">
-                <h2><span>-</span>Main Services</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus sapiente ea assumenda officia maxime
-                    repellat obcaecati quia, architecto soluta sit doloremque quod, cum aliquam, adipisci accusantium
-                    asperiores expedita accusamus temporibus.</p>
-                <button>SEE ALL SERVICES</button>
+                <div class="container">
+                    <hr class="contenedor-hr">
+                    <h2>Servicios Principales</h2>
+                </div>
+
+                <p>Todos estos aspectos se combinan para generar una presencia en línea efectiva, atractiva y
+                    persuasiva, que atrae a los usuarios, genera confianza y fomenta el crecimiento del negocio o
+                    proyecto en el entorno digital.</p>
+                <button>
+                    MIRA LOS SERVICIOS
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#ffffff"
+                        class="bi bi-caret-right-fill" viewBox="0 0 16 16">
+                        <path
+                            d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z" />
+                    </svg>
+                </button>
             </div>
         </section>
 
         <!-- About -->
-        <section class="seccion-3">
+        <section class="seccion-3" id="seccion-3">
             <div class="perfil">
-                <h2><span>-</span>Sobre mi</h2>
+                <div class="container">
+                    <hr class="contenedor-hr">
+                    <h2>Sobre mi</h2>
+                </div>
+
+                <h4>Mejores Diseños Web</h4>
                 <p>Soy una persona multidisciplinar, proactiva, responsable y con muchas ganas de aprender. Estoy en la
                     diplomatura de desarrollador Full Stack.
                     Me siento especialmente motivado de poder tener mi primer trabajo en el mundo de Sistemas, aprender
                     cosas nuevas, trabajar en equipo buscando soluciones o alternativas para las metas propuestas y
                     brindar todos mis conocimientos y aprendizajes</p>
-                <button>MAS SOBRE NOSOTROS</button>
+                <button>
+                    MAS SOBRE NOSOTROS
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#ffffff"
+                        class="bi bi-caret-right-fill" viewBox="0 0 16 16">
+                        <path
+                            d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z" />
+                    </svg>
+                </button>
             </div>
 
             <div class="contenedor-imagen">
@@ -161,13 +188,32 @@
         </section>
 
         <!-- Our Projects -->
-        <section class="seccion-4">
-            <h2><span>-</span>Proyectos</h2>
+        <section class="seccion-4" id="seccion-4">
+
+            <div class="container">
+                <h2>Proyectos</h2>
+                <hr class="contenedor-hr">
+            </div>
+
 
             <div class="descripcion-proyectos">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem quo consectetur cum quia magni
-                    voluptatibus, laborum, beatae impedit eum architecto sunt!</p>
-                <button class="btn-proyectos">VER TODOS LOS TRABAJOS</button>
+                <p>
+                    Nuestros proyectos son el resultado de un enfoque dedicado y creativo en el desarrollo web. Nos
+                    esforzamos por crear soluciones innovadoras y personalizadas que se adapten a las necesidades
+                    específicas de nuestros clientes.</p>
+                <button class="btn-proyectos">
+                    VER TODOS LOS TRABAJOS
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#ffffff"
+                        class="bi bi-arrow-right" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd"
+                            d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z" />
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#ffffff"
+                        class="bi bi-caret-right-fill" viewBox="0 0 16 16">
+                        <path
+                            d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z" />
+                    </svg>
+                </button>
             </div>
 
             <div>
@@ -190,14 +236,25 @@
             </div>
         </section>
 
+        <!-- Formualario de contacto -->
+        <section class="seccion-5" id="seccion-5">
+
+            <form>
+                <h2>Contacto</h2>
+                <input type="text" name="nombre" placeholder="Nombre"><br>
+                <input type="text" name="email" placeholder="Correo electrónico"><br>
+                <textarea name="mensaje" placeholder="Mensaje"></textarea><br>
+                <input class="enviar" type="submit" value="Enviar" onclick="mostrarMensaje()">
+            </form>
+        </section>
+
     </main>
 
     <footer>
         <div>
             <img src="" alt="">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae delectus reprehenderit,
-                perspiciatis similique amet facilis iure voluptates facere accusantium, nihil libero? Impedit
-                laudantium quibusdam tempore est quidem atque repudiandae perspiciatis.</p>
+            <p>Espero que este portafolio capture tus intereses. ¡Si hay
+                algo más en lo que pueda ayudarte, no dudes en contactarme!</p>
             <div>
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" data-name="Layer 1"
                     viewBox="0 0 24 24" id="facebook">
@@ -227,17 +284,41 @@
         <div>
             <h2>Guido Olivero</h2>
             <nav>
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#ffffff"
+                        class="bi bi-arrow-right" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd"
+                            d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z" />
+                    </svg>
                 <a href="#">INICIO</a>
-                <a href="#">SOBRE NOSOTROS</a>
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#ffffff"
+                        class="bi bi-arrow-right" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd"
+                            d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z" />
+                    </svg>
+                <a href="#">SOBRE MI</a>
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#ffffff"
+                        class="bi bi-arrow-right" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd"
+                            d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z" />
+                    </svg>
                 <a href="#">SERVICIOS</a>
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#ffffff"
+                        class="bi bi-arrow-right" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd"
+                            d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z" />
+                    </svg>
                 <a href="#">PORTAFOLIO</a>
-                <a href="#">BLOG</a>
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#ffffff"
+                        class="bi bi-arrow-right" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd"
+                            d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z" />
+                    </svg>
                 <a href="#">CONTACTO</a>
             </nav>
 
         </div>
 
-        <div>
+        <div class="news">
             <h2>Tenga Noticias</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae delectus reprehenderit,
                 perspiciatis similique amet facilis iure voluptates facere accusantium, nihil libero? Impedit
@@ -246,7 +327,7 @@
             <button>SUSCRIBITE</button>
         </div>
 
-        <div>
+        <div class="contacto">
             <h2>Contacto</h2>
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                 class="bi bi-house-door-fill" viewBox="0 0 16 16">
@@ -273,5 +354,11 @@
 
     <p class="firma">&copy; 2023 Guido Olivero - by <span> GuidoOlivero</span></p>
 </body>
+
+<script>
+    function mostrarMensaje() {
+        alert("¡Formulario enviado con éxito!");
+    }
+</script>
 
 </html>
