--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="/css/style.css">
     <title>Guido Olivero</title>
 </head>
-
+<!--Una muestra de las habilidades Front-end
+En el portafolio podemos ver una pagina moderna con lo ultimo en tecnologia y forma de escritura tanto en html como en css.-->
 <body>
     <!-- nav -->
     <header class="contenedor">
